--- a/development/css/main.css
+++ b/development/css/main.css
@@ -26,10 +26,12 @@
     src: url("../fonts/Avenir/AvenirLTStd-Roman.otf");
     font-display: swap;
 }
+
 html {
     -webkit-font-smoothing: antialiased;
-/*    font-smoothing: antialiased;*/
+    /*    font-smoothing: antialiased;*/
 }
+
 html,
 button,
 input,
@@ -121,9 +123,10 @@ textarea {
     --primary_yellow: #fbf8e9;
     --header-color: #1f1f1f;
     --text-color: #333;
-    --header--height--mobile: 169px;
-    --gradient: linear-gradient(180deg, #fbf8e9 85%, #fff 85%);
-    --section--bgsize: 75% auto;
+    --header--height--mobile: 120px;
+    --linear-gradient: linear-gradient(180deg, #fbf8e9 85%, #fff 85%);
+    --solid-white-bg: #fff;
+    --section--bgsize: 65% auto;
 }
 
 
@@ -135,7 +138,7 @@ textarea {
 
 header {
     background: var(--primary_yellow);
-    padding: 5vmax 0 0 0;
+    padding: 0;
     height: var(--header--height--mobile)
 }
 
@@ -150,9 +153,11 @@ header h1 {
     white-space: nowrap;
     overflow: hidden;
 }
+
 main {
     scroll-snap-type: y mandatory;
 }
+
 main section h1 {
     margin: 0 auto;
     /*! padding:0 20px; */
@@ -164,8 +169,9 @@ main section h1 {
     color: var(--header-color);
     width: 280px;
 }
+
 main section:not(:first-of-type) h1 {
-    color:var(--text-color);
+    color: var(--text-color);
     padding-top: 5vmax;
 }
 
@@ -179,17 +185,18 @@ main p {
     text-align: center;
     width: 280px;
 }
+
 main a {
     text-decoration: underline;
     font-weight: bold;
-    color:var(--text-color);
+    color: var(--text-color);
 }
 
 main ul, footer ul {
     width: 285px;
     list-style-type: none;
     padding: 0;
-    margin: 0 auto 0 auto;
+    margin: 1em auto 0 auto;
     display: flex;
     flex-flow: row;
     justify-content: space-between;
@@ -197,57 +204,63 @@ main ul, footer ul {
 
 
 main img {
-    width:100%;
+    width: 100%;
     height: auto;
 }
+
 figcaption {
     font-size: .625em;
 }
 
 main section:first-of-type {
     height: calc(100vh - var(--header--height--mobile));
-    background: url("../img/20---iPhone-12-Pro-Perspective-Style-Left-&-Right_mobile.png") no-repeat 50% 100%,
-                var(--gradient);
-    background-size: 25vmax auto;
+    background-image: url("../img/20---iPhone-12-Pro-Perspective-Style-Left-&-Right_mobile.png");
+    background-color: var(--linear-gradient);
+    background-position: 50% 100%;
+    background-repeat: no-repeat;
+    background-size: 23vmax auto;
 }
+
 main section {
     height: 100vh;
-    scroll-snap-align: start;
+    transition: all .25s linear 0s;
+    background-position: 50% 100%;
+    background-repeat: no-repeat;
+    background-color: var(--solid-white-bg);
+    background-size: var(--section--bgsize);
 }
+
 .share {
-    background: url("../img/iphone_home_screen.png") no-repeat 50% 100%,
-                var(--gradient);
-    background-size: var(--section--bgsize);
+    background-image: url("../img/iphone_home_screen.png");
 }
+
 .treasures {
-    background: url("../img/iphone_home_screen2.png") no-repeat 50% 100%,
-    var(--gradient);
-    background-size: var(--section--bgsize);
+    background-image: url("../img/iphone_home_screen2.png");
 }
+
 .money {
-     background: url("../img/iphone_front_1.png") no-repeat 50% 100%,
-     var(--gradient);
-    background-size: var(--section--bgsize);
- }
-.planet {
-    background: url("../img/iphone_home_screen3.png") no-repeat 50% 100%,
-    var(--gradient);
-    background-size: var(--section--bgsize);
+    background-image: url("../img/iphone_front_1.png");
 }
+
+.planet {
+    background-image: url("../img/iphone_home_screen3.png");
+}
+
 .story,
 .in-touch {
     background: var(--primary_yellow);
-    height:auto;
+    height: auto;
 }
 
 .in-touch form {
-    width:280px;
+    width: 280px;
     margin: 1em auto 0 auto;
 }
+
 .in-touch input {
     width: inherit;
     margin-bottom: 1em;
-    padding:.5em;
+    padding: .5em;
     border-radius: 20px;
     border: none;
     text-align: center;
@@ -260,50 +273,78 @@ main section {
     outline-offset: 5px;
     transition: all .25s linear 0s;
 }
+
 input:focus::placeholder {
     color: transparent;
     transition: all .25s linear 0s;
 }
+
 .in-touch input[type="submit"] {
     background: var(--text-color);
     color: #fff;
 }
+
 figure {
-    margin:1em 1em 0 1em;
+    margin: 1em 1em 0 1em;
 }
+
 .bold--text {
     font-weight: bold;
 }
+
 footer {
     background: #1f1f1f;
-    color:#fff;
-    padding-bottom:1em;
+    color: #fff;
+    /*! padding-bottom:1em; */
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
 }
+
 .footer--first--para {
-    width:285px;
-    margin: 0 auto 1em auto;
-    font-size: 2em;
-    font-weight: 600;
-    text-align: center;
-}
-.social--platforms,
-.t--and--cs {
-    margin:1em auto;
-    width:285px;
-    font-size: .75em;
-}
-.social--platforms li {
-    background: #fff;
-    padding: .25em;
-    border-radius: 50%;
-    width: 35px;
-    height: 35px;
-    text-align: center;
-}
-.t--and--cs {
+    width: 285px;
+    margin: 0 auto;
+    font-size: 1.8em;
+    font-weight: 400;
     text-align: center;
 }
 
+.social--platforms:before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    height: 1px;
+    width: 100%;
+    background: #fff;
+    left: 0;
+    z-index: 1;
+}
+
+.social--platforms {
+    display: flex;
+    flex-flow: column;
+    margin: 1em auto;
+    width: 285px;
+    font-size: .75em;
+    position: relative;
+}
+
+.social--platforms li {
+    background: #fff;
+    width: 48px;
+    height: 48px;
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.t--and--cs {
+    text-align: center;
+}
 
 
 /* ==========================================================================
@@ -413,8 +454,90 @@ footer {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 568px) {
+    main section:first-of-type {
+        height: calc(100vmax);
+        background-size: 43vmax;
+    }
+
+    main section:not(:first-of-type) {
+        background-size: 100px auto;
+        background-position: 10% 25%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    :root {
+        --section--bgsize--mw768: 38vw auto;
+    }
+    main section/*:not(:first-of-type)*/ {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        height: auto;
+        background-size: var(--section--bgsize--mw768);
+    }
+
+    main section:first-of-type {
+        background-color: var(--linear-gradient);
+        background-image: url("../img/20---iPhone-12-Pro-Perspective-Style-Left-&-Right_dtop.png");
+        background-size: var(--section--bgsize--mw768);
+        background-position: 89% 25%;
+        height: auto;
+    }
+    main section.share {
+        background-image: url("../img/share.png");
+        background-size: var(--section--bgsize--mw768);
+    }
+    main section.treasures {
+        background-image: url("../img/treasures.png");
+        background-size: var(--section--bgsize--mw768);
+        background-position: 89% 25%;
+    }
+    main section.money {
+        background-image: url("../img/money.png");
+        background-size: var(--section--bgsize--mw768);
+    }
+    main section.planet {
+        background-image: url("../img/onePlanet.png");
+        background-size: var(--section--bgsize--mw768);
+        background-position: 89% 25%;
+    }
+    main section div {
+        padding: 12.5vw;
+    }
+    main .story div {
+        padding:5vw;
+        grid-row: 1/2 ;
+    }
+    main section:not(:first-of-type).in-touch {
+        display: block;
+        background: #F7EFB4 url("../img/WoodBlocksIcon.png") no-repeat;
+        background-size: 190px auto;
+        background-position: 25%;
+    }
+
+    .in-touch div {
+        padding:0;
+        margin-left: 50%;
+    }
+
+    main section:nth-child(even) div {
+        grid-column: 2/3 ;
+    }
+    figure {
+        grid-row: 1/2 ;
+        margin: auto 1em;
+    }
+    form {
+        display: flex;
+        flex-flow: row;
+    }
+    input {
+        margin : 0 .5em;
+    }
+}
+@media only screen and (min-width: 1024px) {
+
 }
 
 @media print,
